# twit

./: .env  .gitignore  .ignore  Cargo.toml  Dockerfile  Shuttle.toml
bindings/: CheckUser.ts  DBMessage.ts  DBPost.ts  DBPostAndUser.ts  DBReply.ts  DeleteMessage.ts  IncomingUser.ts  LikeMessage.ts  LikePost.ts  LoginUser.ts  Message.ts  Person.ts  Post.ts  Reply.ts  ReplyMessage.ts  TestPost.ts  User.ts  UserAndPost.ts  UserMessage.ts  UserPost.ts  UserReply.ts
frontend/: bun.lockb  package.json
frontend-start/: package.json
frontend-start/src/: root.tsx
frontend/src/: App.tsx  CreateMsg.tsx  CreateReply.tsx  Home.tsx  Login.tsx  Messages.tsx  PostAndReplies.tsx  Replies.tsx  User.tsx  Users.tsx  index.tsx
posts.db/: 000008.sst  IDENTITY  LOG  LOG.old.1688848680217361  LOG.old.1688848777205001  LOG.old.1688848792051474  LOG.old.1688848900644847  LOG.old.1688848910001836  LOG.old.1688848921260756  LOG.old.1688848956783000  LOG.old.1688848972221201  LOG.old.1688848983142747  MANIFEST-000042  OPTIONS-000040
src/: db.rs  main.rs
src/models/: count.rs  frontend.rs  github.rs  google.rs  message.rs  mod.rs  person.rs  post.rs  reply.rs  user.rs
start/: bun.lockb  package.json
start/src/: root.tsx  state.tsx
start/src/components/: CreateMsg.tsx  Messages.tsx  UserInfo.tsx  Users.tsx
start/src/routes/: Create.tsx  Login.tsx  create.tsx  index.tsx  login.tsx
start/src/routes/reply/: [postid].tsx
twit/: bun.lockb  package.json
twit-start/: pnpm-lock.yaml  vite.config.ts
twit-start/src/lib/: session.ts
twit-start/src/routes/: Create.tsx  Login.tsx  index.tsx
twit-start/src/server/api/: queries.ts
twit/src/: App.tsx  CreateMsg.tsx  CreateReply.tsx  Login.tsx  Messages.tsx  Replies.tsx  User.tsx  Users.tsx
twit/src/assets/: svgs.tsx
