[package]
name = "twit"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
ts-rs = { version = "7.0.0", features = ["chrono", "chrono-impl"] }
serde = { version = "1.0.167", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["protocol-http"] }
dotenvy = "0.15.7"
oauth2 = "4.4.1"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.103"
shuttle-actix-web = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
